--- a/BookStoreApp/Views/_ViewImports.cshtml
+++ b/BookStoreApp/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using PrintOrder
-@using PrintOrder.Models
+﻿@using BookStoreApp
+@using BookStoreApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
