--- a/BookStoreApp/Views/Dashboard/Index.cshtml
+++ b/BookStoreApp/Views/Dashboard/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Dashboard</h1>
-            asdasd
+            <h2 class="label label-primary" style="font-size:20px;">Welcome to Library Management System - LMS</h2>
         </div>
     </div>
 </div>
